k8s/temporary-git-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: temporary-git-pod
spec:
  containers:
  - name: git
    image: alpine/git
    volumeMounts:
    - name: quasar-myquasarapp
      mountPath: /quasar
      subPath: quasar
    workingDir: /quasar
    command: ["sleep", "infinity"]
  volumes:
  - name: quasar-myquasarapp
    persistentVolumeClaim:
      claimName: quasar-myquasarapp
